--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.0.0-beta1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "^10.0.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "reactstrap": "^8.8.1"
+    "react-dom": "^17.0.1"
   }
 }
